feat: Responsive Design and burguer menu

--- a/index.html
+++ b/index.html
@@ -14,10 +14,16 @@
     <a href="index.html" class="btns_navbar_container">
         ibrahim-ramirez
     </a>
-    <nav>
+
+    <button class="hamburger" id="hamburger">
+      ☰
+    </button>
+    
+    <nav id="nav-menu">
       <a href="#hero">hello</a>
       <a href="#about-me">about-me</a>
       <a href="#proyectos">projects</a>
+      <a href="#contacto" class="contact-me-responsive">contact-me</a>
     </nav>
     <a href="#contacto" class="btns_navbar_container">
         contact-me
@@ -121,7 +127,7 @@ Always looking for new challenges and projects that allow me to continue growing
   </footer>
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-  <script src="src/js/main.js"></script>
   <script src="src/js/code-container.js"></script>
+  <script src="src/js/main.js"></script>
 </body>
 </html>
